<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="6dp"
    android:paddingBottom="6dp">

    <TextView
        android:id="@+id/tv_item_history_title"
        style="@style/Text"
        android:layout_marginStart="18dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/manufacture"
        android:textColor="#bbbbbb"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="17dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="12dp"
            app:srcCompat="@drawable/green_lock" />

        <TextView
            android:id="@+id/tv_item_history_name"
            style="@style/Text"
            android:textColor="@color/gray_dark"
            android:layout_gravity="bottom"
            android:layout_marginLeft="14dp"
            android:text="@string/manufacturing_astura_673434" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_item_history_did"
        style="@style/Text"
        android:layout_marginStart="56dp"
        android:layout_marginTop="4dp"
        android:text="@string/verified"
        android:textColor="#7ed321" />

</LinearLayout>