<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:attrs="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardlist_item"
    style="@style/Card"
    android:layout_marginBottom="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <include layout="@layout/block_medicine_info" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator_line" />

        <LinearLayout
            android:id="@+id/linearLayoutShowReceipt"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:gravity="left|center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/screen_padding"
            android:paddingRight="@dimen/screen_padding"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/barcode" />

            <TextView
                style="@style/Text"
                android:textColor="@color/almost_black"
                android:layout_marginLeft="11dp"
                android:text="@string/digital_receipt" />

        </LinearLayout>

        <com.luxoft.supplychain.sovrinagentapp.ui.views.ScanQrCodeView
            android:id="@+id/scanQrCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            attrs:qr_code_text="@string/will_be_provided_by_tc"
            attrs:qr_code_title="@string/scan_qr_code" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
