<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardlist_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="2dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="#ffffff"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imageViewSomething"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    card_view:srcCompat="@drawable/something" />


                <TextView
                    android:id="@+id/textViewPopupMessage"
                    style="@style/PopupMessageText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewPopupHeader"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="4dp"
                    android:layout_toEndOf="@+id/imageViewSomething"
                    android:text="@string/you_ve_received" />


                <TextView
                    android:id="@+id/textViewPopupHeader"
                    style="@style/PopupHeaderText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="13dp"
                    android:layout_toEndOf="@+id/imageViewSomething"
                    android:text="@string/new_digital_receipt" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#ffffff"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff">

                <TextView
                    android:id="@+id/textViewPopupTime"
                    style="@style/PopupTimeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="32dp"
                    android:visibility="gone"
                    android:text="@string/_15_09_pm" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>
